@@ -1,3 +1,11 @@
+2013-06-28  Kirill Yukhin  <kirill.yukhin@intel.com>
+
+        * gcc.target/i386/bmi-1.c: Extend with new instrinsic.
+        Fix scan patterns.
+        * gcc.target/i386/bmi-1.c: Ditto.
+        * gcc.target/i386/bmi-bextr-4.c: New.
+        * gcc.target/i386/bmi-bextr-5.c: Ditto.
+
 2013-06-28  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/57682
@@ -152,7 +160,7 @@
 	* g++.dg/cilk-plus/AN/postincr_test.cc: Likewise.
 	* g++.dg/cilk-plus/cilk-plus.exp: New script.
 	* gcc/testsuite/g++.dg/dg.exp: Included Cilk Plus C++ tests in the list.
-	
+
 2013-06-21  Joseph Myers  <joseph@codesourcery.com>
 
 	PR other/53317
@@ -442,7 +450,7 @@
 
 	PR c/57563
 	* c-c++-common/cilk-plus/AN/builtin_fn_mutating.c (main): Fixed a bug
-	in how we check __sec_reduce_mutating function's result.	
+	in how we check __sec_reduce_mutating function's result.
 
 2013-06-10  Michael Meissner  <meissner@linux.vnet.ibm.com>
 	    Pat Haugen <pthaugen@us.ibm.com>
@@ -810,7 +818,7 @@
 	* c-c++-common/cilk-plus/AN/if_test_errors.c (main): New testcase.
 	* c-c++-common/cilk-plus/AN/rank_mismatch.c: Added a '-w' option to
 	dg-option and an header comment.
-	
+
 2013-06-03  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/57419
